force-app/main/default/objects/Partner_Client_Relationship__c/Partner_Client_Relationship__c.object-meta.xml
<CustomObject>
    <label>Partner-Client Relationship</label>
    <nameField>
        <label>Partner-Client Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner-Client Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>