force-app/main/default/objects/Partner_Client_Relationship__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner-Client Relationships</relationshipLabel>
    <relationshipName>Partner_Client_Relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>