force-app/main/default/objects/Partner_Client_Relationship__c/fields/License_Sales_Last_3_Years__c.field-meta.xml
<CustomField>
    <fullName>License_Sales_Last_3_Years__c</fullName>
    <label>License Sales – Last 3 Years</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>