force-app/main/default/objects/Partner_Client_Relationship__c/fields/Margin_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Margin_End_Date__c</fullName>
    <label>Margin End Date</label>
    <type>Date</type>
</CustomField>