force-app/main/default/objects/Partner_Client_Relationship__c/fields/Margin_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Margin_Start_Date__c</fullName>
    <label>Margin Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>