force-app/main/default/objects/Partner_Client_Relationship__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner-Client Relationships (Partner)</relationshipLabel>
    <relationshipName>Partner_Client_Relationships1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>