force-app/main/default/objects/Partner_Client_Relationship__c/fields/Partner_Client_Margin_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Partner_Client_Margin_Eligibility__c</fullName>
    <label>Partner-Client Margin Eligibility</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>