force-app/main/default/objects/Partner_Client_Relationship__c/fields/Partner_of_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_of_Record_Status__c</fullName>
    <label>Partner of Record Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>