force-app/main/default/objects/Partner_Client_Relationship__c/fields/PC_Number__c.field-meta.xml
<CustomField>
    <fullName>PC_Number__c</fullName>
    <displayFormat>PC-{0000}</displayFormat>
    <label>PC Number</label>
    <type>AutoNumber</type>
</CustomField>