force-app/main/default/objects/Partner_Client_Relationship__c/validationRules/Require_Notes_When_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Notes_When_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Partner_Client_Margin_Eligibility__c, &quot;Inactive&quot;),
ISBLANK(Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>&quot;Please enter a reason in the Note field for Inactive status.&quot;</errorMessage>
</ValidationRule>