force-app/main/default/objects/Partner_Client_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Partner__c</columns>
    <columns>Margin_Start_Date__c</columns>
    <columns>Margin_End_Date__c</columns>
    <columns>Partner_of_Record_Status__c</columns>
    <columns>Partner_Client_Margin_Eligibility__c</columns>
    <columns>License_Sales_Last_3_Years__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Client_Margin_Eligibility__c</field>
        <operation>equals</operation>
        <value>Needs Review</value>
    </filters>
    <label>All</label>
</ListView>